# configuration

./: LICENSE  README.md  my_config.py  pyproject.toml  setup.py
conf/: config.yaml
configuration/: Configuration.py
simple_config/: __init__.py
