[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_config"
version = "0.1.0"
authors = [
    { name = "jonathan sullivan", email = "sullivan.jona@northeastern.edu" },
]
description = "simple configuration and logging using munch and loguru"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.6"
dependencies = [
    "munch",  # Add dependencies here
    "loguru",
    "pyyaml"
]

[tool.setuptools]
packages = ["simple_config"]